增加Demo04：cookie的操作

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -27,5 +27,9 @@
 	<input type="submit" value="提交" />
 </form>
 <hr />
+<h2>Demo04-cookie</h2>
+<p>cookie仅有1分钟有效时长</p>
+<a href="/d4m1">设置cookie</a>
+<a href="/d4m2">获取cookie</a>
 </body>
 </html>
